# MV-Editor

./: .gitignore  Pipfile  README.md  main.py  main.spec  make-image.py  mveditor.kv  pyproject.toml
resources/: lang_ja.json  mveditor.kv  project.json  settings.json
utils/: CreateImage.py  core.py  create_image.py
