[tool.poetry]
name = "mv_editor"
version = "0.1.0"
description = ""
authors = ["Mokuichi147 <38586357+Mokuichi147@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
Kivy = "^2.0.0"
opencv-python = "^4.5.5"
ffmpeg-python = "^0.2.0"
Pillow = "^9.0.0"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
numpy = "^1.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
